# caf

./: Cargo.toml  README.md
examples/: read_chunks.rs  read_packets.rs  tool.rs  write_packets.rs
src/: chunks.rs  enums.rs  error.rs  lib.rs  reading.rs  writing.rs
tests/: alac.caf  decode.rs  encode.rs  opus.caf  pcm.caf
