[package]
name = "caf"
edition = "2021"
version = "0.2.0"
authors = ["est31 <MTest31@outlook.com>"]
description = "Pure rust Core Audio Format container decoder"
license = "MIT/Apache-2.0"
keywords = ["coreaudio", "apple"]
repository = "https://github.com/RustAudio/caf"
readme = "README.md"

[lib]
name = "caf"

[dependencies]
byteorder = "1.0"
